Export Map -> JSON and IMG Import JSON to use status had been saved Graph x_coord and y_coord Add Bellman_ford User can choose algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ add_executable(untitled main.cpp
         astar.h
         astar.cpp
         dijkstra.h
-        dijkstra.cpp)
+        dijkstra.cpp
+        bellman_ford.h
+        bellman_ford.cpp)
 target_link_libraries(untitled
         Qt::Core
         Qt::Gui
